# SugarFix

./: .gitignore  EXPLAINED.md  README.md  design_rational.md  requirements.txt  sugarfix_helpers.py  sugarfix_notebook.ipynb  sugarfix_walkthrough.ipynb  sugarfix_walkthrough.py
analysis/glycosylation-bias-analysis/: .gitignore  README.md  UPLOAD_TO_NEW_GITHUB_REPO.md  pyproject.toml  requirements.txt  setup.sh
analysis/glycosylation-bias-analysis/case_studies/01_preparation/: identify_sequons.py  prepare_structure.py  prepare_structure.sh
analysis/glycosylation-bias-analysis/case_studies/02_design/: mpnn_utils.py  run_case_designs.py  run_designs.sh
analysis/glycosylation-bias-analysis/case_studies/03_analysis/: analyze_case_designs.py  analyze_designs.sh
analysis/glycosylation-bias-analysis/case_studies/04_af3_generation/: generate_af3_jsons.py  generate_af3_jsons.sh  generate_clash_af3_jsons.py  generate_clash_sequences.py  generate_full_glycan_af3_json.py
analysis/glycosylation-bias-analysis/case_studies/05_af3_validation/: analyze_af3_validation.py  analyze_clash_results.py  analyze_local_glycosites.py  collect_af3_metrics.py  collect_af3_metrics.sh  make_supplementary_af3_figure.sh  organize_af3_results.py  (+1 more)
analysis/glycosylation-bias-analysis/data/: candidates_template.csv
analysis/glycosylation-bias-analysis/notebooks/: unconstrained_design.ipynb
analysis/glycosylation-bias-analysis/sequon_analysis_pipeline/: FILE_MAP.md  RESULTS_AND_METHODS.md  run_HA_case_study.sh  run_expanded_analysis.sh  run_pipeline.py  run_test_subset.sh
(+104 files in other folders)
